--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,11 @@
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
-
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    }
   ],
   "start_url": ".",
   "display": "standalone",
